--- a/client/css/style.css
+++ b/client/css/style.css
@@ -21,21 +21,25 @@ div.blackCard {
 	background: black;
 	color: white;
 	position: absolute;
-	top: 50%;
+	top: 61%;
 	margin-top: -125px;
 	-webkit-user-select: none;
 	cursor: default;
 }
 
 div.whiteCardContainer {
-	width: 1100px;
+	width: 1070px;
 	height: 270px;
 	background: black;
 	position: absolute;
-    top: 50%;
+    top: 61%;
     margin-top: -135px;
     left: 220px;
     display: inline-flex;
+}
+
+div#playerInfo {
+	color: white;
 }
 
 div.whiteCard {
@@ -96,8 +100,8 @@ div.cardsPlayed {
 
 div.scoreboard {
     width: 40%;
-    height: 200px;
-    top: 67%;
+		height: 145px;
+    top: 80%;
     position: absolute;
     background: black;
     color: white;
